bundle/odf-operator/manifests/odf-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: odf-operator-webhook-server-cert
  creationTimestamp: null
  name: odf-operator-webhook-service
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: odf-operator
status:
  loadBalancer: {}
