bundle/odf-operator/manifests/ux-backend-proxy_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ux-cert-secret
  creationTimestamp: null
  labels:
    app: ux-backend-server
  name: ux-backend-proxy
spec:
  ports:
  - name: proxy
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: ux-backend-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
