bundle/odf-operator/manifests/odf-console_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: odf-console
  name: odf-console
spec:
  egress: []
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-console
    ports:
    - port: 9001
      protocol: TCP
  podSelector:
    matchLabels:
      app: odf-console
  policyTypes:
  - Ingress
  - Egress
