bundle/odf-operator/manifests/ux-backend-proxy_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ux-backend-proxy
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-console
    ports:
    - port: 8888
      protocol: TCP
  podSelector:
    matchLabels:
      app: ux-backend-server
  policyTypes:
  - Ingress
